# ArchFlow

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  archflow-spec.docx  docker-compose.prod.yml
backend/: Dockerfile  alembic.ini  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0246c9846364_add_undo_entries_and_user_undo_settings.py  2964f358c796_versions_snapshots.py  32be253b4921_add_source_handle_target_handle_to_.py  37cbc503fe13_add_drafts_tables.py  59b3c470f2e1_add_activity_log_table.py  5a9694319386_api_keys.py  5c4164b64c8a_add_edge_shape_label_size_via_object_ids.py  648de0788239_diagram_access_user_id.py  68d25cb8444b_add_flows_table.py  7a9f7916de28_invite_team_ids.py  91e6520f52f4_notifications.py  9e93425c2400_organizations_workspaces_members.py  a1b2c3d4e5f6_activity_workspace_id.py  a1b2c3d4e5f6_diagram_packs.py  a1f8c9d2b3e4_repair_notifications_table.py  a7b8c9d0e1f2_rename_undirected_to_uppercase.py  ac3d7e1f9b20_add_position_to_comments.py  b0c0fef60ed2_initial_schema.py  b2c3d4e5f7a8_activity_workspace_id.py  b3c3fc1f069d_webhooks.py  c0dbe5b00001_technology_catalog.py  c0dbe5b00002_activity_target_technology.py  c0dbe5b00003_object_technology_ids.py  c0dbe5b00004_connection_protocol_id.py  c0dbe5b00005_connection_protocol_ids_array.py  c0dbe5b00006_seed_mcp_a2a_protocols.py  c0dbe5b00007_workspace_agent_setting.py  c0dbe5b00008_agent_chat_sessions.py  c0dbe5b00009_workspace_member_agent_access.py  c0dbe5b00010_model_pricing_cache.py  c0dbe5b00011_add_workspace_activity_target_type.py  c0dbe5b00012_message_role_enum.py  c0dbe5b00013_workspace_github_token.py  c0dbe5b00014_object_repo_link.py  c7e4a8d12f91_add_pinned_to_diagrams.py  cc179e2f5273_teams_diagram_access_invites.py  d7a3c8b91e02_invite_pending_approval.py  d91b3eaa4216_draft_diagrams_junction.py  dadb2027cd0a_add_comments_table.py  e4a7f219b8d0_rework_drafts_as_diagram_forks.py  (+4 more)
backend/app/: main.py
backend/app/agents/: __init__.py  context_manager.py  errors.py  limits.py  llm.py  openrouter_catalog.py  pricing.py  redaction.py  registry.py  runtime.py  state.py  tracing.py
backend/app/api/: deps.py  permissions_dep.py  rate_limit_dep.py  workspace_dep.py
backend/app/core/: config.py  database.py  permissions.py  rate_limit.py  redis.py  security.py
backend/app/jobs/: undo_sweeper.py
backend/app/models/: __init__.py  activity_log.py  agent_chat_message.py  agent_chat_session.py  api_key.py  comment.py  connection.py  diagram.py  draft.py  flow.py  invite.py  (+12 more)
backend/data/: technologies.json
backend/evals/: Makefile  README.md  conftest.py  golden_runtime.py  test_budget.py  test_compaction.py  test_critic.py  test_diagram_agent.py  test_draft_policy.py  test_e2e.py  test_explainer.py  test_golden_create_basic.py  test_golden_investigate.py  test_layout.py  test_permission.py  test_planner.py  test_researcher.py  test_tool_correctness.py
backend/scripts/: smoke_test_agents.py
backend/tests/: conftest.py
(+451 files in other folders)
