[project]
name = "archflow-backend"
version = "0.1.0"
description = "ArchFlow — Architecture Design & Modeling Platform API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "gunicorn>=23",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    "redis>=5.2",
    "python-multipart>=0.0.18",
    "httpx>=0.28",
    "email-validator>=2.3.0",
    "anthropic>=0.95.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
    "fakeredis>=2.26",
    "respx>=0.23.1",
    "beautifulsoup4>=4.14.3",
]
agents = [
    "langgraph>=0.2.50",
    # Pinned to <3: LiteLLM (≤1.55) reads langfuse.version which v3 renamed
    # to _version, breaking trace registration. Bump together when LiteLLM
    # ships a v3-compatible release.
    "langfuse>=2.50,<3",
    "litellm>=1.55",
    "cryptography>=44",
    "networkx>=3.3",
]
evals = [
    "deepeval>=2.0",
]

# setuptools sees `app/`, `tests/` and `evals/` as candidate top-level
# packages (each has an __init__.py). Without an explicit include the
# wheel build fails with "Multiple top-level packages discovered". Include
# `app` (runtime) and `evals` (referenced by the eval conftest as
# `from evals.lib.judge import ...`); skip `tests` so the prod wheel
# stays lean.
[tool.setuptools.packages.find]
include = ["app*", "evals*"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions", "evals/golden"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008", "UP042"]

[tool.ruff.lint.per-file-ignores]
"evals/golden/*.json" = ["B018", "E501", "F821"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
